# could-you-ai-agent

./: .could-you-script.dummy.yaml  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml
could_you/: __main__.py  agent.py  attrs_patch.py  cli.py  config.py  could_you_exception.py  cy_error.py  dialogue.py  dynamic.py  inspect_memory.py  llm.py  logging_config.py  mcp_client.py  mcp_host.py  mcp_server.py  memory.py  message.py  message_history.py  metadata.py  model_limits.py  permissions.py  prompt.py  session.py  session_manager.py
could_you/llm/: __init__.py  base_llm.py  boto3.py  google.py  google_common.py  ollama.py  openai.py  vertex.py
could_you/memory/: __init__.py  archive.py  backup.py  search.py  tokens.py
could_you/resources/: .gitignore  SYSTEM_PROMPT.md  __init__.py  config.yaml  script.compact-history.any-script.yaml  script.compact-history.yaml  script.fix_build.json  script.git-commit.yaml  script.summarize.yaml
docs/adr/: 001-jsonl-storage-architecture.md
scripts/: migrate_history.py
tests/: conftest.py  dir_changer.py  test_config.py  test_dynamic.py  test_inspect_memory.py  test_main.py  test_mcp_server.py  test_memory.py  test_message.py  test_model_limits.py  test_permissions.py  test_prompt.py  test_session.py
tests/llm/: test_openai.py  test_vertex.py
tests/memory/: test_search.py
