[build-system]
requires = ["setuptools>=42", "wheel", "uv", "black"]
build-backend = "setuptools.build_meta"

[project]
name = "could-you-mcp-host"
version = "0.1.0"
description = "could-you MCP Host"
authors = [
    { name = "g" }
]
license = { text = "MIT" }
keywords = ["cli", "assistant", "command-line", "tool", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.38.4",
    "mcp>=1.6.0",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/SimplyKnownAsG/could-you-mcp-host"
"Repository" = "https://github.com/SimplyKnownAsG/could-you-mcp-host"

[project.scripts]
could-you = "could_you.__main__:main"
cy = "could_you.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[dependency-groups]
dev = [
    "pytest-black>=0.6.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = "--black"
