[build-system]
requires = ["setuptools>=42", "wheel", "uv", "black"]
build-backend = "setuptools.build_meta"

[project]
name = "could-you-ai-agent"
version = "0.1.0"
description = "could-you MCP Host"
authors = [
    { name = "g" }
]
license = { text = "MIT" }
keywords = ["cli", "assistant", "command-line", "tool", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.38.4",
    "jsonmerge>=1.9.0",
    "mcp>=1.6.0",
    "openai>=1.77.0",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/SimplyKnownAsG/could-you-ai-agent"
"Repository" = "https://github.com/SimplyKnownAsG/could-you-ai-agent"

[project.scripts]
could-you = "could_you.__main__:main"
cy = "could_you.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[dependency-groups]
dev = [
    "pytest-black>=0.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
    "tox>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "--black"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312

[testenv]
deps = 
    pytest>=8.3.5
    pytest-black>=0.6.0
    pytest-asyncio>=0.21.0
    pytest-cov>=6.0.0
    jsonmerge>=1.9.0
commands = pytest {posargs}

[testenv:cov]
commands = pytest --cov=could_you --cov-report=term-missing {posargs}

[testenv:black]
commands = pytest --black {posargs}

[testenv:all]
commands = pytest --black --cov=could_you --cov-report=term-missing {posargs}
"""
