[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "could-you"
version = "0.1.0"
description = "Could You configuration based AI Agent"
authors = [
    { name = "g" }
]
license = { text = "MIT" }
keywords = ["cli", "assistant", "command-line", "tool", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.38.4",
    "jsonmerge>=1.9.0",
    "mcp>=1.6.0",
    "openai>=1.77.0",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/SimplyKnownAsG/could-you-ai-agent"
"Repository" = "https://github.com/SimplyKnownAsG/could-you-ai-agent"

[project.scripts]
could-you = "could_you.__main__:main"
cy = "could_you.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-black",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
fmt = "black ."
test = "pytest"

[tool.pytest.ini_options]
addopts = ["--cov=could_you", "--cov-report=term-missing"]
